--- a/src/app/admin/pages/employee-payment/employee-payment.component.html
+++ b/src/app/admin/pages/employee-payment/employee-payment.component.html
@@ -43,11 +43,11 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr *ngFor="let emp of employer">
-                                <td>{{emp.employeeName}}</td>
-                                <td>{{emp.amount}}</td>
-                                <td>{{emp.month}}</td>
-                                <td>{{emp.paymentDate}}</td>
+                            <tr *ngFor="let employeePayment of employeePaymentList">
+                                <td>{{employeePayment.employeeName}}</td>
+                                <td>{{employeePayment.amount}}</td>
+                                <td>{{employeePayment.month}}</td>
+                                <td>{{employeePayment.paymentDate}}</td>
                                 <td class="action-button">
                                     <a href="javascript:void(0)" ngbTooltip="Edit">
                                         <fa-icon [icon]="faEdit"></fa-icon>
