--- a/src/app/admin/pages/employee/employee.component.html
+++ b/src/app/admin/pages/employee/employee.component.html
@@ -64,7 +64,7 @@
                     <div class="form-group col-lg-4">
                         <label for="firstName">First Name</label>
                         <input class="form-control" type="text" id="firstName" placeholder="First Name"
-                            autocomplete="off" maxlength="100" pattern="[a-zA-Z][a-zA-Z ]+">
+                            autocomplete="off" maxlength="100">
                     </div>
                     <div class="form-group col-lg-4">
                         <label for="middleName">Middle Name</label>
