--- a/src/app/admin/pages/project/project.component.html
+++ b/src/app/admin/pages/project/project.component.html
@@ -143,8 +143,8 @@
                         <label for="startDate">Start Date </label>
                         <div class="input-group">
                             <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
-                                #d="ngbDatepicker" id="startDate" mask="00/00/0000" autocomplete="off">
-                            <button class="btn btn-outline-secondary calendar" (click)="d.toggle()"
+                                #s="ngbDatepicker" id="startDate" mask="00/00/0000" autocomplete="off">
+                            <button class="btn btn-outline-secondary calendar" (click)="s.toggle()"
                                 type="button"></button>
                         </div>
                     </div>
@@ -153,8 +153,8 @@
                         <label for="completionDate">Completion Date </label>
                         <div class="input-group">
                             <input class="form-control" placeholder="DD/MM/YYYY" name="dp" ngbDatepicker
-                                #p="ngbDatepicker" id="compDate" mask="00/00/0000" autocomplete="off">
-                            <button class="btn btn-outline-secondary calendar" (click)="p.toggle()"
+                                #c="ngbDatepicker" id="completionDate" mask="00/00/0000" autocomplete="off">
+                            <button class="btn btn-outline-secondary calendar" (click)="c.toggle()"
                                 type="button"></button>
                         </div>
                     </div>
