--- a/src/app/core/pop-up/pop-up.component.html
+++ b/src/app/core/pop-up/pop-up.component.html
@@ -1,1 +1,13 @@
-<p>pop-up works!</p>
+<div class="modal-header">
+    <h5 class="modal-title">{{ title }}</h5>
+    <button type="button" class="close" aria-label="Close" (click)="dismiss()">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <div [innerHTML]="message"></div>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-primary" (click)="accept()">{{ btnOkText }}</button>
+    <button *ngIf="btnCancelText" type="button" class="btn btn-outline-secondary" (click)="decline()">{{ btnCancelText }}</button>
+  </div>
